* Windows installer no longer clears %PATH% if longer than 1024 chars
* Fix inoperative -tbn/-tbnall/-tbnauto options in egg-optchar
* Fix tinydisplay texture errors on shutdown
* Fix mipmap filtering issues in tinydisplay renderer
* Fix exception when creating intervals before ShowBase is started
* Fix rare X11 .ico cursor bug; also now supports PNG-compressed icons

------------------------  RELEASE 1.9.2  ------------------------

This is a minor bugfix release, fixing a few minor issues that
remained in the 1.9.1 release, including:

* Fix compile errors with more recent versions of ffmpeg
* Include .lib files for pyd modules in Windows SDK
* packp3d now recognizes default egg-object-type definitions
* Fix issues with sphere-into-box and box-into-sphere collisions
* Texture VRAM usage is now correctly reported by pstats
* Support for reading BMP files with alpha channel
* Fix OpenGL crashes in very ancient OpenGL versions
* Fix rare compile issues and crashes with esoteric Python set-ups
* Fix crash when extracting texture that's not a multiple of 4 bytes
* Work around buggy NVIDIA driver that reports _main_* shader inputs
* Add version of transform_vertices that accepts a SparseArray
* Clamp shininess to 0 to avoid GL error when shininess < 0
* Fix various bugs in RopeNode and NurbsCurveEvaluator
* Fix clock-mode Config.prc settings
* NodePath render_mode setters no longer reset wireframe color
* Fix constant reloading of texture when gl-ignore-mipmaps is set
* BamReader now releases the GIL (so it can be used threaded)
* Fix AttributeError in direct.stdpy.threading module

------------------------  RELEASE 1.9.1  ------------------------

This minor release fixes some important regressions and bugs found
in 1.9.0, but also introduces a few minor features.

It also reintroduces the deployment tools that were absent from
the previous release.

The following issues were fixed:
* SDK now properly installs in Mac OS X 10.11 "El Capitan"